Set up correct font imports, begin fleshing out style on mobile for responsive displays

--- a/input.scss
+++ b/input.scss
@@ -1,5 +1,18 @@
-@import url('https://fonts.google.com/specimen/Montserrat');
-@import url('https://fonts.google.com/specimen/Fraunces');
+// @import url('https://fonts.google.com/specimen/Montserrat');
+// @import url('https://fonts.google.com/specimen/Fraunces');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap');
+
+// @font-face {
+//     font-family: Montserrat;
+//     src: url('https://fonts.google.com/specimen/Montserrat');
+// }
+
+// @font-face {
+//     font-family: Fraunces;
+//     src: url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap');
+// }
+
 
 // - Dark cyan: hsl(158, 36%, 37%)
 // - Cream: hsl(30, 38%, 92%)
@@ -51,15 +64,86 @@ body {
 
 
 .productPane {
-    height: 400px;
-    width: 400px;
-    display: grid;
-    align-self: end;
+    height: 100%;
+    width: 90%;
+    margin-left: 5%;
+    // display: grid;
+    // align-self: end;
+    background: $white;
+    border-radius: 10px;
+    // padding-bottom: 0;
     // display: flex;
     // flex-direction: column;
     // justify-content: center;
 }
 
+.productImageMobile {
+    width: 100%;
+    border-radius: 10px 10px 0 0;
+    padding-bottom: 10px;
+}
+
+.productType {
+    padding-top: 5px;
+    padding-left: 20px;
+    margin-bottom: 10px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: .4em;
+    font-size: .74em;
+    height: .8rem;
+    color:$grayish-blue;
+}
+
+.productName{
+    padding-left: 20px;
+    padding-right: 20px;
+    font-family: 'Fraunces', serif;
+    font-weight: 700;
+    font-size: 1.7rem;
+    line-height: 1.65rem;
+    // font-stretch: condensed;
+    margin-bottom: 17px;
+}
+
+.productDescription{
+    padding-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    font-size: .74rem;
+    line-height: 1.23rem;
+    color: $grayish-blue;
+}
+
+.productPriceContainer {
+    display: flex;
+    height: 2rem;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.productPriceSale {
+    font-family: 'Fraunces', serif;
+    color: $dark-cyan;
+    font-weight: 700;
+    font-size: 2rem;
+}
+
+.product
+
+.productPriceOriginal {
+    font-family: 'Montserrat', sans-serif;
+
+}
+
+.buttonAddCart {
+    height: 20px;
+    width: 100px;
+}
 
 
 footer {
