--- a/output.css
+++ b/output.css
@@ -1,5 +1,5 @@
-@import url("https://fonts.google.com/specimen/Montserrat");
-@import url("https://fonts.google.com/specimen/Fraunces");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap");
 html {
   height: 100%;
 }
@@ -33,10 +33,75 @@ body {
 }
 
 .productPane {
-  height: 400px;
-  width: 400px;
-  display: grid;
-  align-self: end;
+  height: 100%;
+  width: 90%;
+  margin-left: 5%;
+  background: hsl(0deg, 0%, 100%);
+  border-radius: 10px;
+}
+
+.productImageMobile {
+  width: 100%;
+  border-radius: 10px 10px 0 0;
+  padding-bottom: 10px;
+}
+
+.productType {
+  padding-top: 5px;
+  padding-left: 20px;
+  margin-bottom: 10px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 0.4em;
+  font-size: 0.74em;
+  height: 0.8rem;
+  color: hsl(228deg, 12%, 48%);
+}
+
+.productName {
+  padding-left: 20px;
+  padding-right: 20px;
+  font-family: "Fraunces", serif;
+  font-weight: 700;
+  font-size: 1.7rem;
+  line-height: 1.65rem;
+  margin-bottom: 17px;
+}
+
+.productDescription {
+  padding-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 0.74rem;
+  line-height: 1.23rem;
+  color: hsl(228deg, 12%, 48%);
+}
+
+.productPriceContainer {
+  display: flex;
+  height: 2rem;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.productPriceSale {
+  font-family: "Fraunces", serif;
+  color: hsl(158deg, 36%, 27%);
+  font-weight: 700;
+  font-size: 2rem;
+}
+
+.product .productPriceOriginal {
+  font-family: "Montserrat", sans-serif;
+}
+
+.buttonAddCart {
+  height: 20px;
+  width: 100px;
 }
 
 footer {
